make navbar wrap to a new line, fix 2nd line being off center after wrap

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -56,9 +56,11 @@ nav {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  align-items: center;
+  align-items: start;
   margin-top: 50px;
-  gap: 1vh;
+  flex-wrap: wrap;
+  gap: 5vh;
+
 }
 
 /*
@@ -79,7 +81,7 @@ nav[class*=box]{
   line-height: 50px;
   height: 50px;
   text-align: center;
-  width: 250px;
+  display: inline-block;
   cursor: pointer;
   font-size: 3vh;
 }
@@ -94,6 +96,7 @@ nav[class*=box]{
 .nav-button span {
   transition: all 0.3s;
 }
+
 .nav-button::before {
   content: '';
   position: absolute;
